# Anvil-ai-engineering-orchestrator

./: .gitignore  README.md  Skillfile  coverage.xml  pyproject.toml  setup.sh
.claude/: settings.local.json
app/: main.py
app/agents/: agent_factory.py  base_agent.py
app/agents/specialized/: architecture_agent.py  code_agent.py  documentation_agent.py  monitor_agent.py  performance_agent.py  security_agent.py  testing_agent.py
app/ai/: __init__.py  ceo.py  code_context_builder.py  context_budget.py  council.py  council_members.py  decision_record.py  intuition.py  mode_selector.py  model_routing.py  relevance.py  synthesizer.py  tool_registry.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  evolution.py  health.py  models.py  monitor.py  repo.py
app/artifacts/: store.py
app/core/: repo_state.py
app/core/config/: models_config.py  settings.py
app/core/monitoring/: logging.py  metrics.py
app/integrations/: code_indexer.py
app/integrations/cloud/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py  openrouter_client.py
app/integrations/graphify/: parser.py  query.py
app/integrations/ollama/: client.py  embeddings.py
app/integrations/skillfile/: client.py
app/memory/: __init__.py  execution_memory.py  memory_store.py  pattern_store.py
app/models/: evolution.py
app/services/: cloud_registry.py  context_service.py  evolution_service.py  learning_service.py  model_service.py  onboarding_service.py  orchestrator.py  proactive_service.py
app/static/: index.html
app/tools/code_analysis/: dependency_analyzer.py  security_scanner.py
app/tools/file_system/: file_chunker.py  file_reader.py  file_search.py  file_writer.py
app/tools/testing/: test_runner.py
app/utils/: retry.py  validators.py
app/workflows/: audit_workflow.py  debug_workflow.py  refactor_workflow.py  report_workflow.py  testing_workflow.py
cli/: ae.py
config/environments/: development.yaml
config/models/: default.yaml
data/ai_decisions/: decisions.json
docs/architecture/: agent_framework.md  autonomous_audit_operating_system.md  autonomous_audit_roadmap.md  memory_and_learning.md  system_architecture.md
docs/demo/: end_to_end_demo.md
docs/status/: current_system_audit.md  phase1_audit_2026-05-14.md
docs/superpowers/plans/: 2026-05-14-agent-framework.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json
tests/unit/: test_agents.py  test_ai_organization.py  test_api_endpoints.py  test_artifacts.py  test_audit_workflow.py  test_base_agent.py  test_cli.py  test_context_service.py  test_context_service_private.py  test_dependency_analyzer.py  test_evolution_service.py  test_execution_memory.py  test_file_search.py  test_graphify_parser.py  test_learning_service.py  test_logging_module.py  test_memory_store.py  test_metrics.py  test_model_service.py  test_models_config.py  test_monitor.py  test_ollama_client.py  test_ollama_client_extended.py  test_orchestrator.py  test_pattern_store.py  test_performance_agent.py  test_report_workflow.py  test_retry.py  test_security_agent.py  test_security_scanner.py  test_settings.py  test_skillfile_client.py  test_tools.py  test_validators_extended.py  test_workflows.py
vscode-extension/: package.json
vscode-extension/media/: panel.css  panel.js
vscode-extension/src/: annotations.ts  client.ts  extension.ts  panel.ts
