[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-engineering-orchestrator"
version = "1.0.0"
description = "Production-grade local AI engineering orchestrator with Graphify integration and multi-model routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Aman", email = "amansrivastava321@gmail.com"}
]
maintainers = [
    {name = "Aman", email = "amansrivastava321@gmail.com"}
]
keywords = [
    "ai", "orchestrator", "graphify", "ollama", "code-generation",
    "local-ai", "llm", "agent", "developer-tools", "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Environment :: Console",
    "Environment :: Web Environment",
]

# Core dependencies - pinned for production stability
dependencies = [
    # Web Framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "starlette==0.41.3",
    
    # Data Validation & Serialization
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pydantic-yaml==1.4.0",
    "orjson==3.10.12",
    
    # Configuration
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "omegaconf==2.3.0",
    
    # HTTP Client
    "httpx==0.28.1",
    "aiohttp==3.11.11",
    "httpcore==1.0.7",
    
    # Async & Concurrency
    "anyio==4.7.0",
    "aioconsole==0.7.0",
    "aiofiles==24.1.0",
    
    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    
    # Caching
    "redis==5.2.1",
    "aiocache==0.12.3",
    "cachetools==5.3.3",
    "diskcache==5.6.3",
    
    # Monitoring & Observability
    "structlog==24.4.0",
    "prometheus-client==0.21.1",
    "prometheus-fastapi-instrumentator==7.0.1",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-instrumentation-asyncio==0.50b0",
    "opentelemetry-instrumentation-httpx==0.50b0",
    
    # Resilience
    "tenacity==9.0.0",
    "circuitbreaker==2.0.0",
    
    # Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.19",
    "cryptography==44.0.0",
    
    # CLI & UI
    "typer==0.15.1",
    "rich==13.9.4",
    "click==8.1.8",
    
    # File Type Detection
    "python-magic==0.4.27",
    
    # Date/Time
    "python-dateutil==2.9.0",
    "arrow==1.3.0",
    
    # Utilities
    "jinja2==3.1.5",
    "python-slugify==8.0.4",
    "text-unidecode==1.3",
    
    # Process Management
    "psutil==6.1.1",
    "setproctitle==1.3.4",
    
    # Compression
    "zstandard==0.23.0",
    
    # Graph & Tree
    "networkx==3.4.2",
    "anytree==2.12.1",
    "graphifyy>=1.0.0",
    "networkx>=3.4.2",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "pytest-mock==3.14.0",
    "pytest-timeout==2.3.1",
    "pytest-benchmark==5.1.0",
    "pytest-random-order==1.1.1",
    "pytest-env==1.1.5",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    
    # Code Quality
    "black==24.10.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "bandit==1.8.2",
    
    # Coverage & Analysis
    "coverage[toml]==7.6.10",
    "radon==6.0.1",
    "xenon==0.9.3",
    
    # Performance Testing
    "locust==2.32.4",
    "py-spy==0.3.14",
    
    # Documentation
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
    "mkdocstrings[python]==0.27.0",
    "mkdocs-autorefs==1.2.0",
]

test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "httpx-ws==0.7.1",
    "coverage[toml]==7.6.10",
]

docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
    "mkdocstrings[python]==0.27.0",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/aman/local-ai-engineering-orchestrator"
Documentation = "https://github.com/aman/local-ai-engineering-orchestrator/docs"
Repository = "https://github.com/aman/local-ai-engineering-orchestrator.git"
Issues = "https://github.com/aman/local-ai-engineering-orchestrator/issues"
Changelog = "https://github.com/aman/local-ai-engineering-orchestrator/blob/main/CHANGELOG.md"

# Console scripts
[project.scripts]
orchestrator = "app.main:run_server"
orchestrator-cli = "app.cli:app"
ae = "cli.ae:main"

[project.gui-scripts]
orchestrator-gui = "app.gui:main"

# Entry points for plugins
[project.entry-points."orchestrator.agents"]
code = "app.agents.specialized.code_agent:CodeAgent"
architecture = "app.agents.specialized.architecture_agent:ArchitectureAgent"
testing = "app.agents.specialized.testing_agent:TestingAgent"
documentation = "app.agents.specialized.documentation_agent:DocumentationAgent"

[project.entry-points."orchestrator.tools"]
file_reader = "app.tools.file_system.file_reader:FileReader"
file_writer = "app.tools.file_system.file_writer:FileWriter"
test_runner = "app.tools.testing.test_runner:TestRunner"

# Tool configurations
[tool.setuptools]
packages = [
    "cli",
    "app",
    "app.ai",
    "app.api",
    "app.api.v1",
    "app.api.v1.endpoints",
    "app.core",
    "app.core.config",
    "app.core.security",
    "app.core.monitoring",
    "app.core.cache",
    "app.services",
    "app.models",
    "app.models.repository",
    "app.agents",
    "app.agents.base",
    "app.agents.specialized",
    "app.tools",
    "app.tools.file_system",
    "app.tools.code_analysis",
    "app.tools.testing",
    "app.integrations",
    "app.integrations.graphify",
    "app.integrations.ollama",
    "app.integrations.ide",
    "app.utils",
    "app.workflows",
    "app.artifacts",
]

[tool.setuptools.package-data]
app = ["py.typed", "*.yaml", "*.yml", "*.json", "*.md", "*.txt"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | migrations
)/
'''
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    ".tox",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ARG", "S101"]
"scripts/**/*.py" = ["D", "INP001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scripts.*",
]
ignore_errors = true
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
    "ENVIRONMENT=testing",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--benchmark-disable",
    "-p no:warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "performance: Performance tests",
    "skip_ci: Skip in CI environment",
]
timeout = 300
timeout_method = "signal"

# Coverage configuration
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__init__.py",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts"]
skips = ["B101", "B601", "B404"]
severity = "medium"

# Safety configuration
[tool.safety]
ignore = [
    "70612",  # Example CVE to ignore
]

# Pre-commit configuration
[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.6.0"},
    {repo = "https://github.com/psf/black", rev = "24.10.0"},
    {repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "v0.8.6"},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.14.1"},
]

# Optional: Custom venv path configuration
[tool.venv]
path = ".venv"
prompt = "orchestrator"
